# aninest

./: .gitignore  .npmignore  404.html  CNAME  Cargo.toml  DEVELOPING.md  LICENSE  README.md  animate.rs  aninest.code-workspace  changelog.md  color-example.ts  hashmap.json  index.html  jest.config.ts  line-example.ts  manifest.webmanifest  minimum.ts  package.json  pnpm-workspace.yaml  registerSW.js  split-color-example.ts  sw.js  sw.js.map  tsconfig.json  typedoc.json  vite.config.ts  web.rs  workbox-33381d99.js  workbox-33381d99.js.map  workbox-3bad6f9a.js  workbox-3bad6f9a.js.map  workbox-d1c838dd.js  workbox-d1c838dd.js.map
.vitepress/: config.ts
Animatable/: index.html
Interp/: index.html
Listeners/: index.html
Vec2/: index.html
api/: index.html
assets/: Animatable_functions_addLocalListener.md.BVUqEoPM.js  Animatable_functions_addLocalListener.md.BVUqEoPM.lean.js  Animatable_functions_addLocalListener.md.D-gZPlQQ.js  Animatable_functions_addLocalListener.md.D-gZPlQQ.lean.js  Animatable_functions_addRecursiveStartListener.md.Crpg0iqc.js  Animatable_functions_addRecursiveStartListener.md.Crpg0iqc.lean.js  Animatable_functions_addRecursiveStartListener.md.DQsmz2Ug.js  Animatable_functions_addRecursiveStartListener.md.DQsmz2Ug.lean.js  Animatable_functions_boundAnimation.md.CY5oaLOu.js  Animatable_functions_boundAnimation.md.CY5oaLOu.lean.js  Animatable_functions_boundAnimation.md.vDO6Mn8N.js  Animatable_functions_boundAnimation.md.vDO6Mn8N.lean.js  Animatable_functions_changeInterpFunction.md.Bhk8H2a9.js  (+4920 more)
wasm/: Cargo.toml  example.ts
wasm/src/: lib.rs
(+906 files in other folders)
