[package]
name = "aninest-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
boomphf = { version = "0.6.0", default-features = false }
js-sys = "0.3.70"
wasm-bindgen = "0.2.93"
wasm-bindgen-test = "0.3.43"
web-sys = { version = "0.3.70", features = ["console"] }
